[package]
name = "ktls-recvmsg"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = { version = "0.2.148", features = ["const-extern-fn", "extra_traits"] }
nix = { version = "0.27.1", features = ["socket", "uio", "net"], default-features = false }
