[package]
name = "ktls-recvmsg"
version = "0.2.0"
edition = "2021"
description = "Bits of the nix crate, extracted to be able to call recvmsg for ktls purposes"
license = "MIT"
repository = "https://github.com/bearcove/ktls-recvmsg"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = { version = "0.2.153", features = ["const-extern-fn", "extra_traits"] }
nix = { version = "0.28.0", features = ["socket", "uio", "net"], default-features = false }
